--- a/pom.xml
+++ b/pom.xml
@@ -90,13 +90,19 @@
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
 
+        <!-- JWT -->
         <dependency>
-            <groupId>com.sky</groupId>
-            <artifactId>sky-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
         </dependency>
 
-
+        <!-- javax.xml.bind/jaxb-api -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 
         <!-- Hibernate Validator -->
         <dependency>
