--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,22 @@ spring:
   #?????
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/yb_picture
+    url: jdbc:mysql://localhost:3306/bank
     username: root
     password: 1234
+
+# JWT配置
+king:
+  jwt:
+    # 管理员JWT配置
+    admin-secret-key: kingdaiking
+    admin-ttl: 7200000
+    admin-token-name: token
+    # 用户JWT配置
+    user-secret-key: kingdaiuser
+    user-ttl: 7200000
+    user-token-name: token
+
 knife4j:
   enable: true
   openapi:
