加入腾讯云存储，完成用户头像上传业务代码开发，优化Mapper层、Service层

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.4.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.king</groupId>
+            <artifactId>bank-backend</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
