--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,13 @@ spring:
     url: jdbc:mysql://localhost:3306/bank
     username: root
     password: 123456
+  # Redis配置
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password:
+      database: 6
 mybatis:
   mapper-locations: classpath:mapper/*.xml  # 指定 XML 映射文件位置
   type-aliases-package: com.king.bankbackend.entity  # 实体类包名
