--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,12 +41,12 @@ king:
     # 设置jwt签名加密时使用的秘钥
     admin-secret-key: king-admin
     # 设置jwt过期时间
-    admin-ttl: 86400
+    admin-ttl: 86400000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
     # 用户JWT配置
     user-secret-key: king-user
-    user-ttl: 86400
+    user-ttl: 86400000
     user-token-name: token
 
 # 对象存储配置（需要从腾讯云获取）
